--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,3 +24,6 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 URL: https://higherx4racine.github.io/smeltr/
+Depends: 
+    R (>= 2.10)
+LazyData: true
