--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,12 +14,11 @@ Authors@R:
             role = "cph"
         )
     )
-Description: Read through amateurish spreadsheets and figure out how to tidy
-    them.
+Description: Build algorithms for tidying spreadsheets with complicated layouts.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
